# scopefn

./: CMakeLists.txt  LICENSE.md  README.md  scopefn.hpp  scopefnmacros.hpp
.github/workflows/: cmake.yml
tests/: CMakeLists.txt  scopefunctiontests.cpp  testentities.hpp
